<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TestReadFile</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="default_val">---</string>
    <string name="filelocation_pfx">File Location:</string>
    <string name="filename_pfx">File Name:</string>
    <string name="filesize_pfx">File Size:</string>    
    <string name="row3_pfx">Row 3 data:</string>  
    <string name="row4_pfx">Row 4 data:</string>  
    <string name="row5_pfx">Row 5 data:</string>  
    <string name="row6_pfx">Row 6 data:</string>  

</resources>
